<resources>
    <string name="myapp">Создано с помощью приложения Я ВЫБИРАЮ ЩЕНКА</string>
    <string name="maybithisbreed">Может быть, мне завести собаку вот такой породы?</string>
    <string name="nopicaded">Данные будут отправлены без изображения. Чтобы это изменить, предоставьте приложению разрешение в разделе "Хранилище"</string>
    <string name="startscreendecription">Выбор домашнего питомца - ответственный и волнующий момент! Давайте пройдем этот путь вместе и найдем единственного и неповторимого - только Вашего - щенка!</string>
    <string name="startscreenbutton">НАЧАТЬ</string>
    <string name="no">нет</string>
    <string name="yes">да</string>
    <string name="say_me_age">Чтобы правильно выбрать для Вас щенка оптимальной породы, пройдите несколько несложных раундов вопросов. Выбирайте тему ниже в любой последовательности. Чем больше ответов, тем выше точность рекомендаций.</string>
    <string name="flag_opt1">компаньон для детей</string>
    <string name="flag_opt2">просто для компании</string>
    <string name="flag_opt3">пробежек по утрам, трекинга</string>
    <string name="flag_opt4">охотиться</string>
    <string name="flag_opt5">для соревнований (напр. послушание)</string>
    <string name="flag_opt6">для защитно-караульной службы</string>
    <string name="btn_block1">О Вас...</string>
    <string name="btn_block2">О собаке...</string>
    <string name="btn_block3">О радостных минутах...</string>
    <string name="btn_block4">О внешнем виде...</string>
    <string name="btn_opt2">Дальше</string>
    <string name="btn_complete">Готово!</string>
    <string name="resultText"></string>
    <string name="no_data">ошибка загрузки</string>
    <string name="intro_about_owner_activity">При выборе собаки, очень важно понимать Ваши возможности. Для этого ответьте на вопросы ниже</string>
    <string name="intro_about_for_what_activity">Разные породы собак лучше подходят для разных занятий. Выберите - для чего, главным образом, вы берете собаку? (можно несколько вариантов)</string>
    <string name="intro_about_infrastructure">Для некоторых пород очень важно - какие окружающие условия Вы им обеспечите.</string>
    <string name="intro_about_morpho">Ваша собака должна приность Вам эстетическое удовольствие</string>
    <string name="action_save">сохранить профиль ответов</string>
    <string name="action_email">поделиться результатом по e-mail</string>
    <string name="action_settings">настройки</string>
    <string name="action_garbage">Сбросить ответы</string>
    <string name="action_share">Поделиться</string>
    <string name="send_to">Отправить</string>
    <string name="drawer_open">Открыт</string>
    <string name="drawer_closed">Закрыт</string>
    <string name="obidience">Послушание и обучаемость</string>
    <string name="guard">Охранные качества</string>
    <string name="disabled_button">Вы уже отвечали на эти вопросы. Чтобы начать заново используйте значок КОРЗИНА</string>
    <string name="disabled_button_short">Вы уже отвечали на эти вопросы</string>
    <string name="flag_havedog">отметьте, если уже есть собака(и)</string>
    <string name="flag_havechild">отметьте, если есть дети младше 10</string>
    <string name="flag_noalergy">только с гипоалергенной шерстью</string>
    <string name="find_breed">Найти породу</string>
    <string name="mesage_to_devs">Написать разработчикам</string>
    <string name="about">Справка</string>
    <string name="resofsearch">ПОДРОБНО</string>
    <string name="starttoast">Получите список рекомендованных пород, ответив на вопросы и нажав ГОТОВО, чтобы ответить на вопросы, открывайте каждый из 4х блоков нажимая на картинки</string>
    <string name="sharetoast">Вы сможете поделиться выбрав конкретную породу</string>
    <string name="status">Точность подбора породы (зависит от количества отвеченных вопросов)</string>
    <string name="no_breed_found">Ни одной породы, соответсвующей условиям, не найдено. Попробуйте ответить на большее количество вопросов.</string>
    <string name="params">Значения подбора</string>
    <string name="email_adress">eyesless.devtest@gmail.com</string>
    <string name="email_subj">О программе Я ВЫБИРАЮ ЩЕНКА</string>
    <string name="project_adress">https://github.com/kalininaleksandrv/NeedMyPuppy</string>
    <string name="about_app">Приложение Я ВЫБИРАЮ ЩЕНКА является некоммерческим проектом с открытым исходным кодом, цель которого повысить качество жизни собак и их хозяев за счет более осознанного подхода к выбору породы. Разработано Eyesless.dev. Приложение находится в стадии альфа-теста (текущая версия alpha 0.0.1). Приложение не может являтся основанием для принятия или не принятия каких-либо решений. Используя Приложение Вы соглашаетесь, что разработчики не несут никакой ответственности за любые обстоятельства прямо или косвенно последовавшие в результате использования Приложения.</string>
    <string name="linktogit">Посетить наш репозиторий на GitHub</string>
    <string name="nofunc">Этот функционал будет реализован в одной из следующих версий приложения</string>

</resources>
