<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.eyesless.needmypuppy.MainActivity">

        <android.support.v7.widget.GridLayout
                android:layout_width="368dp"
                android:layout_height="495dp"
                tools:context=".MainActivity"
                app:columnCount="4"
                app:rowCount="8"
                android:layout_margin="10dp"
                tools:layout_editor_absoluteY="8dp"
                tools:layout_editor_absoluteX="8dp">

                <ImageView
                    android:id="@+id/imageView"
                    app:layout_columnWeight="2"
                    app:layout_rowWeight="1"
                    app:layout_gravity="fill"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    app:layout_column="2"
                    app:layout_row="0"
                    app:layout_columnSpan="2"
                    app:srcCompat="@drawable/startscreen_puppy_small" />

                <TextView
                    android:id="@+id/opt_starttext"
                    app:layout_columnWeight="2"
                    app:layout_gravity="fill"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    app:layout_column="0"
                    app:layout_row="0"
                    app:layout_columnSpan="2"
                    android:text="@string/say_me_age"
                    android:textSize="@dimen/text_size"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/opt_switch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:checked="false"
                    android:text="@string/switch_about"
                    android:textOff="@string/no"
                    android:textOn="@string/yes"
                    android:textSize="@dimen/text_size_small"
                    app:layout_column="2"
                    app:layout_columnSpan="2"
                    app:layout_rowWeight="2"
                    app:layout_gravity="fill"
                    app:layout_row="2"
                    app:showText="true" />

                <Spinner
                    android:id="@+id/spinner_exp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    app:layout_column="0"
                    app:layout_columnSpan="2"
                    app:layout_rowWeight="2"
                    app:layout_gravity="fill"
                    app:layout_row="2" />


                <Spinner
                    android:id="@+id/spinner_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    app:layout_column="0"
                    app:layout_columnSpan="4"
                    app:layout_rowWeight="2"
                    app:layout_gravity="fill"
                    app:layout_row="3"
                    android:entries="@array/opt_time"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/flags_description"
                    app:layout_column="0"
                    app:layout_columnSpan="4"
                    app:layout_row="4"
                    app:layout_rowWeight="1"
                    app:layout_gravity="fill"
                    android:gravity="center"
                    android:layout_marginTop="20dp"/>

                <CheckBox
                    android:id="@+id/checkBox_opt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flag_opt1"
                    app:layout_column="0"
                    app:layout_columnSpan="2"
                    app:layout_rowWeight="1"
                    app:layout_row="5"
                    app:layout_gravity="fill"
                    android:onClick="onCheckboxClicked"
                    />

                <CheckBox
                    android:id="@+id/checkBox_opt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flag_opt2"
                    app:layout_column="2"
                    app:layout_columnSpan="2"
                    app:layout_row="5"
                    app:layout_gravity="fill"
                    android:onClick="onCheckboxClicked"
                    />

                <CheckBox
                    android:id="@+id/checkBox_opt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flag_opt3"
                    app:layout_column="0"
                    app:layout_columnSpan="2"
                    app:layout_rowWeight="1"
                    app:layout_row="6"
                    app:layout_gravity="fill"
                    android:onClick="onCheckboxClicked"
                    />

                <CheckBox
                    android:id="@+id/checkBox_opt4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flag_opt4"
                    app:layout_column="2"
                    app:layout_columnSpan="2"
                    app:layout_row="6"
                    app:layout_gravity="fill"
                    android:onClick="onCheckboxClicked"
                    />

                <Button
                    android:id="@+id/button_opt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_opt1"
                    app:layout_column="0"
                    app:layout_columnSpan="2"
                    app:layout_row="7"
                    app:layout_gravity="center"
                    />

                <Button
                    android:id="@+id/button_opt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_opt2"
                    app:layout_column="2"
                    app:layout_columnSpan="2"
                    app:layout_row="7"
                    app:layout_gravity="center"
                    />



        </android.support.v7.widget.GridLayout>

</android.support.constraint.ConstraintLayout>
