<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.eyesless.needmypuppy.For_what">

    <TextView
        android:id="@+id/textView_top"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="wrap"
        android:layout_height="wrap_content"
        android:text="@string/intro_about_owner_activity"
        android:textSize="@dimen/text_size"
        android:gravity="center"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView_main"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp" />

    <ImageView
        android:id="@+id/imageView_main"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="wrap"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="wrap"
        app:srcCompat="@drawable/for_what_image"
        app:layout_constraintTop_toBottomOf="@+id/textView_top"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toTopOf="@+id/checkBox_opt1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp" />

    <CheckBox
        android:id="@+id/checkBox_opt1"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="wrap"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/flag_opt1"
        android:textSize="@dimen/text_size"
        android:gravity="left"
        app:layout_constraintTop_toBottomOf="@+id/imageView_main"
        app:layout_constraintLeft_toLeftOf="@+id/guideline3"
        app:layout_constraintBottom_toTopOf="@+id/checkBox_opt3"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <CheckBox
        android:id="@+id/checkBox_opt2"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="wrap"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/flag_opt2"
        android:textSize="@dimen/text_size"
        android:gravity="left"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_opt3"
        app:layout_constraintLeft_toLeftOf="@+id/guideline3"
        app:layout_constraintBottom_toTopOf="@+id/checkBox_opt4"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="8dp" />

    <CheckBox
        android:id="@+id/checkBox_opt3"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="wrap"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/flag_opt3"
        android:textSize="@dimen/text_size"
        android:gravity="left"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_opt1"
        app:layout_constraintLeft_toLeftOf="@+id/guideline3"
        app:layout_constraintBottom_toTopOf="@+id/checkBox_opt2"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp" />

    <CheckBox
        android:id="@+id/checkBox_opt4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/flag_opt4"
        android:textSize="@dimen/text_size"
        android:gravity="left"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_opt2"
        app:layout_constraintLeft_toLeftOf="@+id/guideline3"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button_complete" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        app:layout_constraintGuide_begin="8dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/button_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

</android.support.constraint.ConstraintLayout>
