<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.eyesless.needmypuppy.MainActivity">

    <FrameLayout
        android:id="@+id/frame_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">
    </FrameLayout>

    <ImageButton
        android:id="@+id/imageButton_aboutowner"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="spread"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="spread"
        app:srcCompat="@drawable/silhouette_hunting_dog_new"
        app:layout_constraintRight_toLeftOf="@+id/guideline6"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/text_aboutowner"
        app:layout_constraintTop_toTopOf="@+id/guideline1"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/text_aboutowner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_block1"
        android:gravity="center"
        android:textSize="@dimen/text_size_small"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintRight_toLeftOf="@+id/guideline6" />

    <ImageButton
        android:id="@+id/imageButton_aboutdog"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="spread"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="spread"
        app:srcCompat="@drawable/silhouette_jumping_dog"
        app:layout_constraintTop_toTopOf="@+id/guideline1"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline6"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/text_aboutdog"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_aboutdog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_block2"
        android:gravity="center"
        android:textSize="@dimen/text_size_small"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageButton_aboutdog"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.427" />

    <ImageButton
        android:id="@+id/imageButton_forwhat"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="spread"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="spread"
        app:srcCompat="@drawable/silhouette_playing_dog"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/text_forwhat"
        app:layout_constraintRight_toLeftOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_forwhat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_block3"
        android:gravity="center"
        android:textSize="@dimen/text_size_small"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline6"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/button_goahead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_complete"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.461"
        android:layout_marginEnd="16dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline1"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        tools:layout_editor_absoluteY="204dp"
        tools:layout_editor_absoluteX="0dp" />
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"
        tools:layout_editor_absoluteY="332dp"
        tools:layout_editor_absoluteX="0dp" />
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"
        tools:layout_editor_absoluteY="460dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline6"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="180dp" />



</android.support.constraint.ConstraintLayout>